--- a/inFile.html
+++ b/inFile.html
@@ -15,6 +15,20 @@
 <body>
 <h1><a href="file:///C:/Users/USER/Desktop/AtomTest/dddd.html">탁상공론의 예시</h1>
   <br><br>
+  
+    <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/626b5c8d7b967b11798d09ce/1g1pm3236';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 
   <p style = "margin-top:40px;">단순히 '학자, 정치인' 등이 현장에 가보지 않은 채로 내리는 결론은<p> '탁상공론'이라고 말하지는 않는다. 효과가 없거나 마이너스여야 탁상공론이다. 이런 탁상공론에 도장이 쿵 찍혀서 공론이 아닌 정책의 옷을 입어버리면, 그 때부터는 크든 작든 어디선가 헬게이트가 열리게 된다.
 
